--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gulp-concat-vendor": "0.0.4",
     "gulp-uglify": "^1.3.0",
     "main-bower-files": "^2.9.0",
-    "gulp-minify-css" : "^1.2.1",
+    "gulp-cssnano" : "2.0.0",
     "gulp-notify":"2.2.0",
     "gulp-inject": "1.5.0",
     "run-sequence": "1.1.4",
@@ -17,7 +17,7 @@
     "gulp-clone": "1.0.0",
     "gulp-order": "1.1.1",
     "gulp-flatten" : "0.2.0",
-    "gulp-clean": "0.3.1",
+    "gulp-rimraf": "0.2.0",
     "gulp-debug": "2.1.2",
     "gulp-uncss": "1.0.4"
   },
