--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gulp-concat-vendor": "0.0.4",
     "gulp-uglify": "^1.3.0",
     "main-bower-files": "^2.9.0",
-    "gulp-cssnano" : "2.0.0",
+    "gulp-minify-css" : "^1.2.1",
     "gulp-notify":"2.2.0",
     "gulp-inject": "1.5.0",
     "run-sequence": "1.1.4",
