fix :npm config

--- a/pom.xml
+++ b/pom.xml
@@ -260,6 +260,16 @@
                         </configuration>
                     </execution>
                     <execution>
+                        <id>npm version</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <phase>generate-resources</phase>
+                        <configuration>
+                            <arguments>-v</arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
                         <id>npm config</id>
                         <goals>
                             <goal>npm</goal>
